# scheduler

./: README.md  input.txt  noxfile.py  pyproject.toml  setup.py  tox.ini
scheduler/: cli.py  parser.py
tests/: test_cli.py  test_parser.py
